--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Ignore .settings File
+# Ignore .settings file and bin folder
 /.settings
+bin/
