--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>jfoenix</artifactId>
 			<version>8.0.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -35,7 +41,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>8.8.3</version>
 				<configuration>
-					<mainClass>LaunchApp.java</mainClass>
+					<mainClass>LaunchApp</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
