--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>11</version>
+			<version>17</version>
 		</dependency>
 	</dependencies>
 
@@ -41,7 +41,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>8.8.3</version>
 				<configuration>
-					<mainClass>LaunchApp</mainClass>
+					<mainClass>LaunchApp.java</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
