--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
+		<!-- External libraries dependencies -->
+	
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -26,18 +28,28 @@
 			<version>8.0.8</version>
 		</dependency>
 
+		<!-- JavaFx FXML dependencies -->
+		
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-controls</artifactId>
-			<version>17</version>
+   			<artifactId>javafx-controls</artifactId>
+    		<version>18-ea+7</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+    		<artifactId>javafx-fxml</artifactId>
+    		<version>18-ea+7</version>
+		</dependency>	
+		
 	</dependencies>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
-				<groupId>com.zenjava</groupId>
+				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>8.8.3</version>
 				<configuration>
