--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>TelemedicineProject</groupId>
 	<artifactId>TelemedicineProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<!-- External libraries dependencies -->
