--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 		
 	</dependencies>
 
+	<properties>
+		<maven.compiler.release>16</maven.compiler.release>
+	</properties>
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -61,8 +65,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>16</release>
 				</configuration>
 			</plugin>
 		</plugins>
