--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<!-- External libraries dependencies -->
+	
+		<!-- HTTP request needed dependencies -->
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
@@ -22,15 +23,24 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>
 		</dependency>
+		
+		<!-- BITalino communication dependencies -->
+		
+		<!-- https://mvnrepository.com/artifact/io.ultreia/bluecove -->
+		<dependency>
+			<groupId>io.ultreia</groupId>
+			<artifactId>bluecove</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+		<!-- JavaFx FXML dependencies -->
+
 		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
 		<dependency>
 			<groupId>com.jfoenix</groupId>
 			<artifactId>jfoenix</artifactId>
 			<version>9.0.1</version>
 		</dependency>
-
-		<!-- JavaFx FXML dependencies -->
-
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
