--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-	
+
 		<!-- HTTP request needed dependencies -->
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
@@ -23,15 +23,22 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>
 		</dependency>
-		
+
 		<!-- BITalino communication dependencies -->
-		
+
 		<!-- https://mvnrepository.com/artifact/io.ultreia/bluecove -->
 		<dependency>
 			<groupId>io.ultreia</groupId>
 			<artifactId>bluecove</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.bitalino/bitalino-java-sdk -->
+		<!--  <dependency>
+			<groupId>com.bitalino</groupId>
+			<artifactId>bitalino-java-sdk</artifactId>
+			<version>1.1.0</version>
+		</dependency> -->
 
 		<!-- JavaFx FXML dependencies -->
 
