--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,6 @@
 			<version>11.1.0</version>
 		</dependency>
 
-		<!-- JavaFX basic dependencies -->
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -75,6 +74,12 @@
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-fxml</artifactId>
 			<version>18-ea+7</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.kerner1000/javafx-chart-zooming -->
+		<dependency>
+			<groupId>org.gillius</groupId>
+			<artifactId>jfxutils</artifactId>
+			<version>1.0</version>
 		</dependency>
 
 	</dependencies>
