--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
 
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
 		<dependency>
-    		<groupId>org.openjfx</groupId>
-    		<artifactId>javafx-graphics</artifactId>
-    		<version>18-ea+8</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>18-ea+8</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
 		<dependency>
@@ -92,10 +92,10 @@
 	</dependencies>
 
 	<properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    	<javafx.version>17.0.1</javafx.version>
-    	<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
-  	</properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<javafx.version>17.0.1</javafx.version>
+		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+	</properties>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -109,21 +109,26 @@
 					<target>11</target>
 				</configuration>
 			</plugin>
-			
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.4</version>
 				<executions>
 					<execution>
-            			<goals>
-             				<goal>java</goal>
-            			</goals>
-          			</execution>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>main.java.launch.Launcher</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
 				</executions>
-				<configuration>
-					<mainClass>main.java.launch.LaunchApp</mainClass>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
