--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
   	</properties>
 
 	<build>
+		<sourceDirectory>src</sourceDirectory>
 		<finalName>Telelepsia</finalName>
 		<plugins>
 			<plugin>
