--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<mainClass>main.java.launch.LaunchApp</mainClass>
+					<mainClass>launch.LaunchApp</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -152,7 +152,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>main.java.launch.Launcher</mainClass>
+									<mainClass>launch.Launcher</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
