--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
   	</properties>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>src/main/java</sourceDirectory>
 		<finalName>Telelepsia</finalName>
 		<plugins>
 			<plugin>
