--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Telemedicine-Patient-Desktop-App</groupId>
 	<artifactId>Telemedicine-Patient-Desktop-App</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
@@ -99,7 +99,7 @@
 
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
-		<finalName>Telelepsia</finalName>
+		<finalName>jar-compilation</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -148,6 +148,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<finalName>Telelepsia-Patients-${project.version}</finalName>
 							<shadedArtifactAttached>true</shadedArtifactAttached>
 							<transformers>
 								<transformer
