--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Ignore .settings file and bin folder
+# Ignore .settings file, bin, target and .idea folder
 /.settings
 bin/
 /target/
+/.idea
